# logseq-nexus

./: .gitignore  AGENTS.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: dev-phases.md  handshake.md  prd.md
docs/compatibility/: gaps.md  logseq-matrix.md
docs/decisions/: search-strategy.md
docs/perf/: handshake.md
docs/protocol/: handshake.md
docs/security/: handshake.md
mcp-server/: Cargo.toml
mcp-server/src/: lib.rs  main.rs
mcp-server/src/auth/: token.rs
mcp-server/src/protocol/: errors.rs  messages.rs
mcp-server/src/runtime/: capabilities.rs  handshake.rs  mod.rs  server.rs
mcp-server/src/state/: capabilities.rs
mcp-server/tests/: contract.rs  unit.rs
mcp-server/tests/contract/: capability_refresh_test.rs  hello_handshake_test.rs
mcp-server/tests/unit/: capability_list_test.rs  token_test.rs
plugin/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
plugin/src/: index.ts
plugin/src/auth/: token.ts
plugin/src/protocol/: errors.ts  messages.ts
plugin/src/runtime/: capabilities.ts  connection.ts  handshake.ts
plugin/src/state/: connection.ts
plugin/src/ui/: status_panel.tsx
plugin/tests/integration/: ready_state.test.ts  recovery_flow.test.ts
plugin/tests/unit/: capabilities.test.ts  status_panel.test.ts  token.test.ts
specs/001-plugin-capability-handshake/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-logseq-compatibility-matrix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+4 files in other folders)
