[package]
name = "logseq-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"

[dev-dependencies]
